--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,12 +8,20 @@ const navItems = [
     url: "/#home",
   },
   {
+    title: "about",
+    url: "/#about",
+  },
+  {
     title: "projects",
     url: "/#projects",
   },
   {
-    title: "about me",
-    url: "/#about-me",
+    title: "experience",
+    url: "/#experience",
+  },
+  {
+    title: "contact",
+    url: "/#contact",
   },
 ];
 
