--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Projects from "../components/Projects.astro";
 import About from "../components/About.astro";
+import Experience from "../components/Experience.astro";
+import Contact from "../components/Contact.astro";
 ---
 
 <Layout>
   <Hero />
-  <Projects />
   <About />
+  <Projects />
+  <Experience />
+  <Contact />
 </Layout>
