--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -4,7 +4,7 @@ interface Props {
   class?: string;
 }
 
-const { href, class: className } = Astro.props;
+const { href, class: className = "" } = Astro.props;
 ---
 
 <a
@@ -12,10 +12,7 @@ const { href, class: className } = Astro.props;
   href={href}
   role="link"
   rel="noopener noreferrer"
-  class:list={[
-    "inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium border bg-gray-100 text-gray-800 border-gray-300 px-3 py-2 space-x-2 transition dark:text-white dark:bg-gray-800 dark:border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-offset-2 active:bg-black",
-    className,
-  ]}
+  class={`inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium border bg-gray-100 text-gray-800 border-gray-300 px-3 py-2 space-x-2 transition dark:text-white dark:bg-gray-800 dark:border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-offset-2 active:bg-black ${className}`}
 >
   <slot />
 </a>
