--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,32 @@
 ---
 import Layout from "../layouts/Layout.astro";
+
+import SectionContainer from "../components/SectionContainer.astro";
 import Hero from "../components/Hero.astro";
-import Projects from "../components/Projects.astro";
 import About from "../components/About.astro";
+import Projects from "../components/Projects.astro";
 import Experience from "../components/Experience.astro";
 import Contact from "../components/Contact.astro";
 ---
 
 <Layout>
-  <Hero />
-  <About />
-  <Projects />
-  <Experience />
-  <Contact />
+  <SectionContainer id="home" paddingClass="pt-28 sm:pt-36 pb-16 sm:pb-24">
+    <Hero />
+  </SectionContainer>
+
+  <SectionContainer id="about">
+    <About />
+  </SectionContainer>
+
+  <SectionContainer id="projects">
+    <Projects />
+  </SectionContainer>
+
+  <SectionContainer id="experience">
+    <Experience />
+  </SectionContainer>
+
+  <SectionContainer id="contact">
+    <Contact />
+  </SectionContainer>
 </Layout>
