feat: update About and Experience sections with new components and content

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,25 +1,24 @@
+---
+import Experience from "./Experience.astro"
+import User from "./icons/User.astro"
+---
+
 <div class="grid gap-12 lg:grid-cols-2 lg:gap-20 lg:items-center">
-  <!-- Left column - Image -->
+  <!-- Left column - Experience -->
   <div class="flex justify-center">
-    <img
-      src="/profile/profile.webp"
-      alt="Profile picture of Angel Chuncho"
-      class="w-3/4 sm:w-2/3 lg:w-[55%] rounded-lg object-cover"
-    />
+    <Experience />
   </div>
 
   <!-- Right column - Description -->
   <div class="space-y-8 sm:space-y-10">
-    <h2 class="text-3xl font-bold tracking-tight sm:text-4xl lg:text-5xl text-balance">
+    <h2 class="flex items-center gap-x-3 mb-6 text-3xl font-bold tracking-tight sm:text-4xl text-balance">
+      <User class="size-8 text-cyan-500" />
       About Me
     </h2>
     <p class="max-w-lg text-xl sm:text-2xl leading-relaxed text-gray-500">
-      I'm a passionate software engineer with a love for crafting elegant and
+      I'm a Software Engineering student from Ecuador, with a love for crafting elegant and
       efficient code. With experience in both frontend and backend development,
       I enjoy building full-stack applications that solve real-world problems.
-      When I'm not coding, you can find me exploring new technologies,
-      contributing to open-source projects, or sharing my knowledge through tech
-      blogging.
     </p>
   </div>
 </div>
