--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -66,8 +66,8 @@ const PROJECTS = [
 ];
 ---
 
-<h2 class="text-3xl font-bold tracking-tight sm:text-4xl text-balance mb-12">
-  <Project class="text-cyan-500" />
+<h2 class="flex items-center gap-x-3 mb-6 text-3xl font-bold tracking-tight sm:text-4xl text-balance">
+  <Project class="size-7 text-cyan-500" />
   Projects
 </h2>
 
