--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,25 +1,34 @@
-<div class="grid gap-12 lg:grid-cols-2 lg:gap-20 lg:items-center">
-  <!-- Left column - Image -->
-  <div class="flex justify-center">
-    <img
-      src="/experience/experience.webp"
-      alt="Experience illustration"
-      class="w-3/4 sm:w-2/3 lg:w-[55%] rounded-lg object-cover"
-    />
-  </div>
+---
+import ExperienceItem from "./ExperienceItem.astro";
 
-  <!-- Right column - Description -->
-  <div class="space-y-8 sm:space-y-10">
-    <h2 class="text-3xl font-bold tracking-tight sm:text-4xl lg:text-5xl text-balance">
-      Experience
-    </h2>
-    <p class="max-w-lg text-xl sm:text-2xl leading-relaxed text-gray-500">
-      I have experience working with a variety of technologies and frameworks,
-      including React, Node.js, MongoDB, and more. I have contributed to several
-      projects, both personal and professional, where I have honed my skills in
-      full-stack development, cloud computing, and design systems. I am always
-      eager to learn new technologies and take on challenging projects that
-      allow me to grow as a developer.
-    </p>
-  </div>
-</div>
+const EXPERIENCE = [
+  {
+    date: "May, 2021 - Present",
+    title: "Software Engineering Student",
+    place: "Escuela Politécnica Nacional",
+    description: "bla",
+  },
+  {
+    date: "October 14th, 2024",
+    title: "Volunteer",
+    place: "Imagen Sistemas",
+    description: "bla",
+  },
+  {
+    date: "October 2024 - February 2025",
+    title: "Tutor Volunteer",
+    place: "LudoLab, EPN",
+    description: "bla",
+  },
+];
+---
+
+<ol class="relative">
+  {
+    EXPERIENCE.map((experience) => (
+      <li>
+        <ExperienceItem {...experience} />
+      </li>
+    ))
+  }
+</ol>
