fix: correct date formatting and update titles in Experience section

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,19 +3,19 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
   {
-    date: "May, 2021 - Present",
+    date: "May 2021 - Present",
     title: "Software Engineering Student",
     place: "Escuela Politécnica Nacional",
     description: "bla",
   },
   {
-    date: "October 14th, 2024",
-    title: "Volunteer",
-    place: "Imagen Sistemas",
+    date: "Dec 2024 - Present",
+    title: "Event Operations Member",
+    place: "Imagen Sistemas, EPN",
     description: "bla",
   },
   {
-    date: "October 2024 - February 2025",
+    date: "Oct 2024 - Feb 2025",
     title: "Tutor Volunteer",
     place: "LudoLab, EPN",
     description: "bla",
