--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -25,9 +25,9 @@ const { title, tagline, description, image, tags, link, github } = Astro.props;
   <Image
     src={image}
     alt={`Screenshot of ${title} project`}
-    width={400}
-    height={200}
-    class="w-full h-60 object-cover"
+    width={1200}
+    height={675}
+    class="aspect-video w-full h-60 object-cover transition duration-300 group-hover:scale-105"
   />
   <!-- Header card -->
   <div class="flex flex-col space-y-1.5 p-6 pb-3">
@@ -35,7 +35,6 @@ const { title, tagline, description, image, tags, link, github } = Astro.props;
     <p class="text-sm text-gray-500">{tagline}</p>
     <!-- Techs Pills -->
     <div class="flex flex-wrap gap-2">
-      <ul class="flex flex-wrap gap-2 mb-2">
         {
           tags.map((tag) => (
             <li class={`flex items-center gap-1 rounded-full px-2 py-1 text-xs font-medium ${tag.class}`}>
@@ -44,12 +43,11 @@ const { title, tagline, description, image, tags, link, github } = Astro.props;
             </li>
           ))
         }
-      </ul>
     </div>
   </div>
   <!-- Content card -->
   <div class="flex-1 space-y-4 p-6 pt-0">
-    <p class="text-base text-gray-500 leading-relaxed">{description}</p>
+    <p class="text-sm sm:text-base text-gray-500 leading-relaxed">{description}</p>
   </div>
   <!-- Footer card -->
   <div class="flex items-center justify-center p-6 gap-2 pt-4">
